# Pacman

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
GameFiles/: Configuration.h  GameLoad.h  LoadFunctions.h  Main.cpp  SoundIds.h
GameFiles/Animations/: GhostAnimationComponent.cpp  GhostAnimationComponent.h  PacmanAnimationComponent.cpp  PacmanAnimationComponent.h
GameFiles/Colliders/: BigPickupCollider.cpp  BigPickupCollider.h  GhostCollider.cpp  GhostCollider.h  PacmanCollider.cpp  PacmanCollider.h  SmallPickupCollider.cpp  SmallPickupCollider.h
GameFiles/Commands/: MovePacmanCommand.cpp  MovePacmanCommand.h  PlaySoundCommand.cpp  PlaySoundCommand.h  StartGameCommand.cpp  StartGameCommand.h
GameFiles/Components/: BlinkyAIComponent.cpp  BlinkyAIComponent.h  DisplayComponent.cpp  DisplayComponent.h  DistanceComponent.cpp  DistanceComponent.h  FPSComponent.cpp  FPSComponent.h  GhostAIComponents.cpp  GhostAIComponents.h  GhostFSM.cpp  GhostFSM.h  GridMovementComponent.cpp  GridMovementComponent.h  HealthComponent.cpp  HealthComponent.h  PacmanCollider.cpp  PacmanCollider.h  PacmanFSM.cpp  PacmanFSM.h  PacmanLivesComponent.cpp  PacmanLivesComponent.h  PlayFieldGridComponent.cpp  PlayFieldGridComponent.h  ScoreComponent.cpp  ScoreComponent.h  SmallPickupCollider.cpp  SmallPickupCollider.h
GameFiles/Observers/: SmallPickupObserver.cpp  SmallPickupObserver.h
Minigin/: Main.cpp  Minigin.cpp  Minigin.h  Parameters.h
Minigin/Base/: Component.h  GameObject.cpp  GameObject.h  Minigin.cpp  Scene.cpp
Minigin/Commands/: Command.h  GameActorCommands.h  GameObjectCommands.h  MoveCommands.h
Minigin/Components/: AutoRotateComponent.cpp  AutoRotateComponent.h  FPSComponent.cpp  FPSComponent.h  HealthComponent.cpp  HealthComponent.h  MoveableComponent.cpp  MoveableComponent.h  TextComponent.cpp  TextComponent.h  TextureComponent.cpp  TextureComponent.h  TransformComponent.cpp  TransformComponent.h  TrashTheCacheComponent.cpp  TrashTheCacheComponent.h  TrashTheCacheEx1Component.cpp  TrashTheCacheEx1Component.h  TrashTheCacheEx2Component.cpp  TrashTheCacheEx2Component.h
Minigin/Header/: AutoRotateComponent.h  Component.h  FPSComponent.h  Font.h  GameObject.h  Renderer.h  ResourceManager.h  Scene.h  SceneManager.h  TextComponent.h  Texture2D.h  TextureComponent.h  Time.h  Transform.h  TransformComponent.h
Minigin/Singletons/: GUI.cpp  GUI.h  InputManager.cpp  InputManager.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  Singleton.h  Time.cpp  Time.h
Minigin/Source/: AutoRotateComponent.cpp  Component.cpp  FPSComponent.cpp  Font.cpp  GameObject.cpp  InputManager.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp  TextComponent.cpp  Texture2D.cpp  TextureComponent.cpp  Time.cpp  Transform.cpp  TransformComponent.cpp
Minigin/Wrappers/: Controller.cpp  Controller.h  Font.cpp  Font.h  Texture2D.cpp  Texture2D.h
Resources/Files/: GridLayout.csv  GridLayout.txt
